# open-voice

./: .gitignore  LICENSE  README.md  pixi.toml
.opencode/: .gitignore  README.md  opencode.example.json
.opencode/agent/: build.md  voice.md  (+1 more)
apps/runtime/: README.md  pyproject.toml
apps/runtime/src/open_voice_runtime/app/: __init__.py
apps/runtime/src/open_voice_runtime/audio/: types.py
apps/runtime/src/open_voice_runtime/conversation/: __init__.py  events.py
apps/runtime/src/open_voice_runtime/core/: __init__.py  ids.py
apps/runtime/src/open_voice_runtime/integrations/moonshine_voice/: __init__.py
apps/runtime/src/open_voice_runtime/integrations/opencode/: __init__.py
apps/runtime/src/open_voice_runtime/llm/: contracts.py  engine.py  registry.py
apps/runtime/src/open_voice_runtime/llm/providers/: __init__.py
apps/runtime/src/open_voice_runtime/observability/: __init__.py
apps/runtime/src/open_voice_runtime/router/: __init__.py  registry.py
apps/runtime/src/open_voice_runtime/session/: __init__.py  manager.py  models.py  state_machine.py
apps/runtime/src/open_voice_runtime/storage/: __init__.py
apps/runtime/src/open_voice_runtime/stt/: __init__.py  contracts.py  engine.py
apps/runtime/src/open_voice_runtime/stt/engines/: __init__.py
apps/runtime/src/open_voice_runtime/tts/: contracts.py  registry.py  service.py
apps/runtime/src/open_voice_runtime/tts/engines/: __init__.py
contracts/: openapi.yaml
demos/: .env.example  README.md  dev.sh  package.json
meetings/: Meeting Notes – 2026-03-01 (Architecture & Research Planning).md
(+49 files in other folders)
