[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "open-voice-runtime"
version = "0.1.0"
description = "SDK-first realtime voice runtime for Open Voice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Voice Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.3",
  "ruff>=0.11"
]

[tool.hatch.build.targets.wheel]
packages = ["src/open_voice_runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
